crates/pipeline/src/snapshots/momulus_pipeline__prompt__tests__patch_prompt.snap
---
source: crates/pipeline/src/prompt.rs
expression: ctx.render()
---
/skill:translate

Context: pull request #7 in the repository acme/blog.
The working copy is mounted at /work. Every path below is relative to /work.

Files to work on:
- posts/hello.mdx

Command arguments:
- lang = en

Skill parameters:
- naming = {stem}.{lang}{ext}

## What to do

Edit the files directly under /work. When you are done:

- write a short summary of the changes to /out/summary.md
  (what you changed and why, what you deliberately left alone);
- do not run git commands: the orchestrator handles the commit, the branch
  and the pull request;
- do not touch anything outside /work, except /out/summary.md;
- if there is nothing to change, change nothing and say so in
  /out/summary.md.
