crates/pipeline/src/snapshots/momulus_pipeline__prompt__tests__review_prompt.snap
---
source: crates/pipeline/src/prompt.rs
expression: ctx.render()
---
/skill:proofread

Context: pull request #42 in the repository acme/blog.
The working copy is mounted at /work. Every path below is relative to /work.

Files to work on:
- posts/hello.mdx
- posts/next.mdx

## What to return

Use the write tool to store the result in /out/findings.json.
That file is the only artifact; nothing structured needs to go to stdout.
The working copy at /work is mounted read-only — do not change anything there.

The file must be valid JSON matching this JSON Schema:

```json
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "title": "ReviewOutput",
  "description": "Output of a review-mode skill — exactly what the model writes.",
  "type": "object",
  "properties": {
    "findings": {
      "type": "array",
      "default": [],
      "items": {
        "$ref": "#/$defs/Finding"
      }
    },
    "summary": {
      "description": "Short review summary.",
      "type": "string"
    }
  },
  "additionalProperties": false,
  "required": [
    "summary"
  ],
  "$defs": {
    "Finding": {
      "description": "A single model finding, anchored to a line of a file.",
      "type": "object",
      "properties": {
        "body": {
          "description": "Finding text.",
          "type": "string"
        },
        "line": {
          "description": "Line number in the new version of the file (1-based).",
          "type": "integer",
          "format": "uint32",
          "minimum": 0
        },
        "path": {
          "description": "File path relative to the repository root.",
          "type": "string"
        },
        "severity": {
          "$ref": "#/$defs/Severity"
        },
        "suggestion": {
          "description": "Suggested replacement for the whole line, when applicable.",
          "type": [
            "string",
            "null"
          ]
        }
      },
      "additionalProperties": false,
      "required": [
        "path",
        "line",
        "severity",
        "body"
      ]
    },
    "Severity": {
      "description": "Finding category.",
      "type": "string",
      "enum": [
        "typo",
        "grammar",
        "punctuation",
        "style",
        "terminology",
        "bug",
        "security",
        "other"
      ]
    }
  }
}
```

Rules:
- `path` — a path relative to /work, exactly as in the file list above;
- `line` — the line number in the current (new) version of the file, starting at 1;
- `severity` — one of the values from the schema;
- `body` — a short note: what is wrong and what to do about it. Write it in the
  same language as the file you are reviewing;
- `suggestion` — an optional replacement for the whole line, with no markdown
  fence and no line number;
- `summary` — 2–5 sentences: the overall picture plus anything that did not fit
  into individual findings;
- at most 5 findings; if you have more, keep the important ones and mention
  the rest in `summary`;
- if there is nothing to report, return an empty `findings` array and say so in
  `summary`.

Do not write any other file and do not modify anything under /work.
